###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "platforms", version = "0.0.11")

# TODO: Remove when protobuf is released with a version of rules_python that supports 8.x
#bazel_dep(name = "rules_python", version = "1.0.0", dev_dependency = True)

bazel_dep(name = "abseil-cpp", version = "20250127.0", repo_name = "com_google_absl")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "googletest", version = "1.16.0", repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.9.1", repo_name = "com_github_google_benchmark")
bazel_dep(name = "protobuf", version = "30.0-rc1", repo_name = "com_google_protobuf")
bazel_dep(name = "toolchains_llvm", version = "1.3.0")

git_override(
    module_name = "toolchains_llvm",
    remote = "https://github.com/bazel-contrib/toolchains_llvm",
    commit = "e831f94a8b7f3a39391f5822adcab8e4d443c03b", # Add more tools by default (#463)
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

llvm.toolchain(
    name = "llvm_toolchain_llvm",
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain_llvm")
register_toolchains("@llvm_toolchain_llvm//:all")
