# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Extra development modules."""

bazel_dep(name = "hedron_compile_commands", dev_dependency = True, repo_name = "bazel_compile_commands_extractor")
git_override(
    module_name = "hedron_compile_commands",
    commit = "75ba4c31d3b74fa5fb57c7508220571d4e52f828",
    remote = "https://github.com/helly25/bazel-compile-commands-extractor.git",
)

# TODO(helly25): bump once dwyu 1.x no longer drags in boost.filesystem ->
# boost@1.83.0.bcr.4, whose MODULE.bazel fails module resolution.
bazel_dep(name = "depend_on_what_you_use", version = "0.16.0", dev_dependency = True)
