# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""LLVM toolchain."""

bazel_dep(name = "toolchains_llvm", version = "1.7.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain_llvm",
    #llvm_version = "20.1.8",
    llvm_version = "21.1.8",
    extra_llvm_distributions = {
        # 21.1.8 — best native match for macOS (Apple clang 21), but NOT yet the
        # default pin: clang 21 tightened constexpr evaluation and currently breaks
        # our struct_names_clang.h field-name reflection (tracked non-blocking in
        # test-clang). Promote to default once that port lands. Newer LLVM no longer
        # publishes a macOS-X64 build; fine since we only support macOS arm64 now.
        "LLVM-21.1.8-Linux-ARM64.tar.xz": "65ce0b329514e5643407db2d02a5bd34bf33d159055dafa82825c8385bd01993",
        "LLVM-21.1.8-Linux-X64.tar.xz": "b3b7f2801d15d50736acea3c73982994d025b01c2f035b91ae3b49d1b575732b",
        "LLVM-21.1.8-macOS-ARM64.tar.xz": "b95bdd32a33a81ee4d40363aaeb26728a26783fcef26a4d80f65457433ea4669",
        "clang+llvm-21.1.8-aarch64-pc-windows-msvc.tar.xz": "f214b1226d8de005b5f691dd29d9dfea2b49e22d0de445429916173dbb626f7f",
        "clang+llvm-21.1.8-armv7a-linux-gnueabihf.tar.gz": "4c25b04275d7b34f47f6a7f8f05ef5518ab391c31c084e8f19e6a89a24f8fa57",
        # 20.1.8 — newest clang that currently builds mbo cleanly; the default pin
        # and the version the blocking CI (test-bcr) uses.
        "LLVM-20.1.8-Linux-ARM64.tar.xz": "b855cc17d935fdd83da82206b7a7cfc680095efd1e9e8182c4a05e761958bef8",
        "LLVM-20.1.8-Linux-X64.tar.xz": "1ead36b3dfcb774b57be530df42bec70ab2d239fbce9889447c7a29a4ddc1ae6",
        "LLVM-20.1.8-macOS-ARM64.tar.xz": "a9a22f450d35f1f73cd61ab6a17c6f27d8f6051d56197395c1eb397f0c9bbec4",
        "clang+llvm-20.1.8-aarch64-pc-windows-msvc.tar.xz": "0df3e81e8fe26370dd2b60b9e009d81cd130d3fdc41b257434aa663c5d9f0c13",
        "clang+llvm-20.1.8-armv7a-linux-gnueabihf.tar.gz": "d2060f7a2259d95d121e6a2ceaa948b7d724c497e6e0b752e39086eaaf1675c6",
        # 22.1.7 — newest released; a forward-looking rung in the CI clang matrix
        # (ahead of Apple clang 21, so not the default pin). Pinned toolchains_llvm
        # 1.7.0 predates 22.x, so we supply the hashes via extra_llvm_distributions;
        # values copied from toolchains_llvm's canonical distributions mapping
        # (toolchain/distributions/github.jsonc on master).
        "LLVM-22.1.7-Linux-ARM64.tar.xz": "118ca2d3ad9da34367e05735317854e7977db45dc4c02a32af58da64c23b8789",
        "LLVM-22.1.7-Linux-X64.tar.xz": "edb0522b41e261819c06ea437d249f9b8acfa413d3805bc9920eec6fb76ff830",
        "LLVM-22.1.7-macOS-ARM64.tar.xz": "4177245188b0a30a6539c96b361dea56f253485756bfd8927a6a59e7301e7806",
        "clang+llvm-22.1.7-aarch64-pc-windows-msvc.tar.xz": "9957fee5aeba5f88369c37e127a07034eaa806c2e9e996b14ce5a32a9320653f",
    },
)
use_repo(llvm, "llvm_toolchain_llvm")

register_toolchains(
    "@llvm_toolchain_llvm//:all",
    dev_dependency = True,
)
