# Copyright 2023 M. Boerger (helly25.com)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "convert_container_cc",
    hdrs = ["convert_container.h"],
    deps = ["//mbo/types:traits_cc"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "convert_container_test",
    srcs = ["convert_container_test.cc"],
    deps = [
        ":convert_container_cc",
        ":limited_set_cc",
        ":limited_vector_cc",
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
    size = "small",
)

cc_library(
    name = "limited_map_cc",
    hdrs = ["limited_map.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":limited_ordered_cc",
        "//mbo/types:compare_cc",
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/log:absl_log",
    ],
)

cc_test(
    name = "limited_map_test",
    srcs = ["limited_map_test.cc"],
    deps = [
        ":limited_map_cc",
        "//mbo/testing:matchers_cc",
        "@com_google_absl//absl/log:initialize",
        "@com_google_googletest//:gtest_main",
    ],
    size = "small",
)

cc_library(
    name = "limited_ordered_cc",
    hdrs = ["internal/limited_ordered.h"],
    visibility = ["//visibility:private"],
    deps = [
        "//mbo/types:compare_cc",
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/log:absl_log",
    ],
)

cc_library(
    name = "limited_set_cc",
    hdrs = ["limited_set.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":limited_ordered_cc",
        "//mbo/types:compare_cc",
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/log:absl_log",
    ],
)

cc_test(
    name = "limited_set_test",
    srcs = ["limited_set_test.cc"],
    deps = [
        ":limited_set_cc",
        "//mbo/testing:matchers_cc",
        "@com_google_absl//absl/log:initialize",
        "@com_google_googletest//:gtest_main",
    ],
    size = "small",
)

cc_library(
    name = "limited_vector_cc",
    hdrs = ["limited_vector.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/log:absl_log",
    ],
)

cc_test(
    name = "limited_vector_test",
    srcs = ["limited_vector_test.cc"],
    deps = [
        ":limited_vector_cc",
        "//mbo/testing:matchers_cc",
        "@com_google_absl//absl/log:initialize",
        "@com_google_googletest//:gtest_main",
    ],
    size = "small",
)
