# SPDX-FileCopyrightText: Copyright (c) The helly25/mbo authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_library(
    name = "any_scan_cc",
    hdrs = ["any_scan.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//mbo/types:cases_cc",
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/log:absl_check",
    ],
)

cc_test(
    name = "any_scan_test",
    size = "small",
    srcs = ["any_scan_test.cc"],
    deps = [
        ":any_scan_cc",
        ":limited_set_cc",
        ":limited_vector_cc",
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "convert_container_cc",
    hdrs = ["convert_container.h"],
    visibility = ["//visibility:public"],
    deps = ["//mbo/types:traits_cc"],
)

cc_test(
    name = "convert_container_test",
    size = "small",
    srcs = ["convert_container_test.cc"],
    deps = [
        ":convert_container_cc",
        ":limited_set_cc",
        ":limited_vector_cc",
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "limited_map_cc",
    hdrs = ["limited_map.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":limited_options_cc",
        ":limited_ordered_cc",
        "//mbo/types:compare_cc",
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/log:absl_log",
    ],
)

cc_test(
    name = "limited_map_test",
    size = "small",
    srcs = ["limited_map_test.cc"],
    deps = [
        ":limited_map_cc",
        "//mbo/testing:matchers_cc",
        "@com_google_absl//absl/log:initialize",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "limited_options_cc",
    hdrs = ["limited_options.h"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "limited_ordered_cc",
    hdrs = ["internal/limited_ordered.h"],
    visibility = ["//visibility:private"],
    deps = [
        ":limited_options_cc",
        "//mbo/config:config_cc",
        "//mbo/config:require_cc",
        "//mbo/types:compare_cc",
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/log:absl_log",
    ],
)

cc_test(
    name = "limited_ordered_test",
    size = "small",
    srcs = ["limited_ordered_test.cc"],
    deps = [
        ":limited_ordered_cc",
        "//mbo/config:config_cc",
        "//mbo/config:require_cc",
        "//mbo/testing:matchers_cc",
        "@com_google_absl//absl/log:initialize",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "limited_set_cc",
    hdrs = ["limited_set.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":limited_options_cc",
        ":limited_ordered_cc",
        "//mbo/types:compare_cc",
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/log:absl_log",
    ],
)

cc_test(
    name = "limited_set_test",
    size = "small",
    srcs = ["limited_set_test.cc"],
    deps = [
        ":limited_set_cc",
        "//mbo/testing:matchers_cc",
        "@com_google_absl//absl/log:initialize",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_binary(
    name = "limited_set_benchmark",
    srcs = ["limited_set_benchmark.cc"],
    tags = ["manual"],
    visibility = ["//visibility:private"],
    deps = [
        ":limited_set_cc",
        ":limited_vector_cc",
        "//mbo/testing:matchers_cc",
        "@com_github_google_benchmark//:benchmark",
        "@com_google_absl//absl/log:initialize",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "limited_vector_cc",
    hdrs = ["limited_vector.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":limited_options_cc",
        "//mbo/config:require_cc",
        "//mbo/types:traits_cc",
        "@com_google_absl//absl/log:absl_log",
    ],
)

cc_test(
    name = "limited_vector_test",
    size = "small",
    srcs = ["limited_vector_test.cc"],
    deps = [
        ":limited_vector_cc",
        "//mbo/testing:matchers_cc",
        "@com_google_absl//absl/log:initialize",
        "@com_google_googletest//:gtest_main",
    ],
)
